--- a/Dockerfile-goreleaser
+++ b/Dockerfile-goreleaser
@@ -1,3 +1,3 @@
 FROM debian:bookworm
-COPY ./gatewayd /usr/bin/gatewayd
+COPY ./genesis-avalon-gateway /usr/bin/gatewayd
 ENTRYPOINT ["/usr/bin/gatewayd"]
