--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -21,15 +21,6 @@ run:
   # Default: true
   tests: false
 
-  # Which dirs to skip: issues from them won't be reported.
-  # Can use regexp here: `generated.*`, regexp is applied on full path,
-  # including the path prefix if one is set.
-  # Default value is empty list,
-  # but default dirs are skipped independently of this option's value (see skip-dirs-use-default).
-  # "/" will be replaced by current OS file path separator to properly work on Windows.
-  skip-dirs:
-    - protobuf
-
   # Enables skipping of directories:
   # - vendor$, third_party$, testdata$, examples$, Godeps$, builtin$
   # Default: true
@@ -57,6 +48,15 @@ run:
   # Default: use Go version from the go.mod file, fallback on the env var `GOVERSION`, fallback on 1.18
   go: '1.20'
 
+# Which dirs to skip: issues from them won't be reported.
+# Can use regexp here: `generated.*`, regexp is applied on full path,
+# including the path prefix if one is set.
+# Default value is empty list,
+# but default dirs are skipped independently of this option's value (see skip-dirs-use-default).
+# "/" will be replaced by current OS file path separator to properly work on Windows.
+issues:
+  exclude-dirs:
+    - protobuf
 
 # output configuration options
 output:
@@ -68,7 +68,7 @@ output:
   # Example: "checkstyle:report.xml,json:stdout,colored-line-number"
   #
   # Default: colored-line-number
-  format: colored-line-number
+  formats: colored-line-number
 
 # All available settings of specific linters.
 linters-settings:
